--- a/index.qmd
+++ b/index.qmd
@@ -110,7 +110,7 @@ mean_dreamy = dreamy_df['post_surgical_score'].mean()
 mean_duck = duck_df['post_surgical_score'].mean()
 
 # Create figure
-fig, ax = plt.subplots(figsize=(9, 6))
+fig, ax = plt.subplots(figsize=(8, 6))
 
 # Plot scatter points
 ax.scatter(dreamy_df['patient'], dreamy_df['post_surgical_score'], 
@@ -263,7 +263,7 @@ mean_dreamy_rand = dreamy_rand_df['post_surgical_score'].mean()
 mean_duck_rand = duck_rand_df['post_surgical_score'].mean()
 
 # Create figure
-fig, ax = plt.subplots(figsize=(5, 5))
+fig, ax = plt.subplots(figsize=(5, 6))
 
 # Plot scatter points
 ax.scatter(dreamy_rand_df['patient'], dreamy_rand_df['post_surgical_score'], 
@@ -276,11 +276,11 @@ ax.axhline(mean_dreamy_rand, color='#4E79A7', linestyle='--', linewidth=2, alpha
 ax.axhline(mean_duck_rand, color='#E15759', linestyle='--', linewidth=2, alpha=0.8)
 
 # Add text annotations with symbols in square boxes
-ax.text(5, mean_dreamy_rand + 0.15, f'○ Doc Dreamy Mean: {mean_dreamy_rand:.2f}', 
-        fontsize=11, color='#4E79A7', fontweight='bold', va='bottom',
+ax.text(5, mean_dreamy_rand, f'○ Doc Dreamy Mean: {mean_dreamy_rand:.2f}', 
+        fontsize=11, color='#4E79A7', fontweight='bold', va='center',
         bbox=dict(boxstyle='square', facecolor='white', edgecolor='#4E79A7', alpha=0.9, linewidth=2))
-ax.text(5, mean_duck_rand - 0.15, f'△ Doc Duck Mean: {mean_duck_rand:.2f}', 
-        fontsize=11, color='#E15759', fontweight='bold', va='top',
+ax.text(5, mean_duck_rand, f'△ Doc Duck Mean: {mean_duck_rand:.2f}', 
+        fontsize=11, color='#E15759', fontweight='bold', va='center',
         bbox=dict(boxstyle='square', facecolor='white', edgecolor='#E15759', alpha=0.9, linewidth=2))
 
 # Styling
@@ -315,7 +315,7 @@ mean_dreamy = dreamy_df['post_surgical_score'].mean()
 mean_duck = duck_df['post_surgical_score'].mean()
 
 # Create figure
-fig, ax = plt.subplots(figsize=(9, 8))
+fig, ax = plt.subplots(figsize=(8, 8))
 
 # Add shaded region first (so it's behind the points)
 ax.axvspan(-1, 1, alpha=0.15, color='gray', zorder=0)
